add reset for sort list

--- a/roles/sap_control/tasks/prepare_commands.yml
+++ b/roles/sap_control/tasks/prepare_commands.yml
@@ -1,10 +1,15 @@
 # SPDX-License-Identifier: Apache-2.0
 ---
 
+# This step is important for functions like 'restart' where start order would be wrong. 
+- name: SAP Control - Set fact with empty sort list for step {{ command_step_item['command'] }}
+  ansible.builtin.set_fact:
+    __sap_control_fact_instances_sorted: []
+
 - name: SAP Control - Prepare sorted lists of SAP instances for command {{ command_step_item['command'] }}
   ansible.builtin.set_fact:
     __sap_control_fact_instances_sorted: >-
-      {{ (__sap_control_fact_instances_sorted | d([]) | unique)
+      {{ (__sap_control_fact_instances_sorted | unique)
         + (__sort_fragment | difference(__sap_control_fact_instances_sorted | d([]))) }}
   loop: >-
     {{ __sap_control_execution_order['start']
